cka/services,load-balancers and networking/firstservice.yml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  clusterIP: 10.0.171.239
  selector:
    app: MyApp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
