cka/services,load-balancers and networking/multiportservice.yml
apiVersion: v1
kind: Service
metadata:
  name: multiport-service
spec:
  selector:
    app: myapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9376
  - name: https
    protocol: TCP
    port: 443
    targetPort: 9376
