cka/services,load-balancers and networking/servicewithoutselector.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-wthout-selector
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376

---

apiVersion: v1
kind: Endpoints
metadata:
  name: endpoint-1
subsets:
  - addresses:
      - ip: 1.1.1.1
    ports:
      - port: 9376
