cka/services,load-balancers and networking/firstingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: test
          servicePort: 80
